Fixed script linking

--- a/chant.html
+++ b/chant.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <script src="https://raw.githubusercontent.com/frmatthew/exsurge/master/dist/exsurge.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/frmatthew/exsurge/master/dist/exsurge.js"></script>
   <script type="text/javascript">
     /* testing exsurge */
     var gabc = "(f3) EC(ce!fg)CE(f) *(,) ad(fe~)vé(f!gwhf)nit(f) (,)";
