--- a/chant.html
+++ b/chant.html
@@ -7,6 +7,7 @@
   <title>exsurge Test Page</title>
   <meta name="description" content="exsurge Test Page">
   <meta name="author" content="Fr. Matthew Spencer, O.S.J.">
+  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,6 +32,10 @@
     /* testing exsurge */
     var ctxt = new exsurge.ChantContext();
 
+    ctxt.lyricTextFont = "'Crimson Text', serif";
+    ctxt.lyricTextSize *= 1.2;
+    ctxt.dropCapTextFont = ctxt.lyricTextFont;
+    ctxt.annotationTextFont = ctxt.lyricTextFont;
 
     var updateChant = function() {
       
