--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <title>exsurge Test Page</title>
   <meta name="description" content="exsurge Test Page">
   <meta name="author" content="Fr. Matthew Spencer, O.S.J.">
+  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,6 +20,8 @@
 
   <p><em>This is the simplest of test pages, just to start testing out exsurge. For more information, please visit <a href="https://github.com/frmatthew/exsurge/">the exsurge GitHub pages</a>.</em></p>
 
+  <chant-visual use-drop-cap="false" annotation="IV">(c4) Pu(g)er(h) na(i)tus(h) est(ghg) ()</chant-visual>
+
   <label>Enter your GABC code here:</label><br/>
   <textarea rows="10" cols="80" id="gabcSource" oninput="updateChant()" onchange="updateChant()">(c3) PU(ei)ER(i) *() na(iji)tus(h) est(hhh) no(ih/ji)bis,(i) (;) et(ei~) fí(iji)li(hg)us(f) da(hhi)tus(h) est(h) no(hihh)bis:(efe) (:) cu(e)jus(f) im(h)pé(gi!jk)ri(ih)um(h) (,) su(h)per(h) hú(ih/ji)me(hg)rum(hhh) e(hf//hghvGF)jus:(gf) (:) et(hg) vo(h)cá(hji)bi(h)tur(hhh) no(h)men(hhh) e(highvGF)jus,(gf) (;) ma(hj)gni(i) con(eh~)sí(h)li(hhhf)i(f) An(fhf!gwh)ge(efe)lus.(e) Ps.(::) Can(ehg)tá(hi)te(i) Dó(i)mi(i)no(i) cán(ik)ti(j)cum(j) no(ji)vum:(ij) *(:) qui(ig)a(hi) mi(i)ra(i)bí(i!jwk)li(i)a(h) fe(hhh)cit.(fe) (::) Gló(ehg)ri(hi)a(i) Pa(i)tri.(i) (::) E(i) u(i!jwk) o(i) u(h) a(hhh) e.(fe) (::)</textarea>
   <div id="chant-container">
@@ -28,6 +31,11 @@
   <script type="text/javascript">
     /* testing exsurge */
     var ctxt = new exsurge.ChantContext();
+
+    ctxt.lyricTextFont = "'Crimson Text', serif";
+    ctxt.lyricTextSize *= 1.2;
+    ctxt.dropCapTextFont = ctxt.lyricTextFont;
+    ctxt.annotationTextFont = ctxt.lyricTextFont;
 
 
     var updateChant = function() {
