--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
   <chant-visual use-drop-cap="false" annotation="IV">(c4) Pu(g)er(h) na(i)tus(h) est(ghg) ()</chant-visual>
 
   <label>Enter your GABC code here:</label><br/>
-  <textarea rows="10" cols="80" id="gabcSource" oninput="updateChant()" onchange="updateChant()">(c3) PU(ei)ER(i) *() na(iji)tus(h) est(hhh) no(ih/ji)bis,(i) (;) et(ei~) fí(iji)li(hg)us(f) da(hhi)tus(h) est(h) no(hihh)bis:(efe) (:) cu(e)jus(f) im(h)pé(gi!jk)ri(ih)um(h) (,) su(h)per(h) hú(ih/ji)me(hg)rum(hhh) e(hf//hghvGF)jus:(gf) (:) et(hg) vo(h)cá(hji)bi(h)tur(hhh) no(h)men(hhh) e(highvGF)jus,(gf) (;) ma(hj)gni(i) con(eh~)sí(h)li(hhhf)i(f) An(fhf!gwh)ge(efe)lus.(e) Ps.(::) Can(ehg)tá(hi)te(i) Dó(i)mi(i)no(i) cán(ik)ti(j)cum(j) no(ji)vum:(ij) *(:) qui(ig)a(hi) mi(i)ra(i)bí(i!jwk)li(i)a(h) fe(hhh)cit.(fe) (::) Gló(ehg)ri(hi)a(i) Pa(i)tri.(i) (::) E(i) u(i!jwk) o(i) u(h) a(hhh) e.(fe) (::)</textarea>
+  <textarea rows="10" cols="80" id="gabcSource" oninput="updateChant()" onchange="updateChant()">(c3) PU(ei)ER(hg)</textarea>
   <div id="chant-container">
   </div>
 
