--- a/chant.html
+++ b/chant.html
@@ -27,7 +27,7 @@
   <div id="chant-container">
   </div>
 
-  <script type="text/javascript" src="https://rawgit.com/frmatthew/exsurge/master/dist/exsurge.js"></script>
+  <script type="text/javascript" src="https://ex.surge.sh/exsurge.js"></script>
   <script type="text/javascript">
     /* testing exsurge */
     var ctxt = new exsurge.ChantContext();
