Fixed mode for sample chat Puer natus est

--- a/chant.html
+++ b/chant.html
@@ -47,7 +47,7 @@
       } else {
         mappings = exsurge.Gabc.createMappingsFromSource(ctxt, gabcSource.value);
         score = new exsurge.ChantScore(ctxt, mappings, true);
-        score.annotation = new exsurge.Annotation(ctxt, "%V%");
+        score.annotation = new exsurge.Annotation(ctxt, "%VII%");
       }
 
       layoutChant();
