--- a/chant.html
+++ b/chant.html
@@ -10,36 +10,55 @@
   <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
 
   <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
-<body onload="updateChant()" onresize="updateChant()">
+<body onload="updateChant()" onresize="layoutChant()">
 
   <h1>exsurge Test Page</h1>
 
   <p><em>This is the simplest of test pages, just to start testing out exsurge. For more information, please visit <a href="https://github.com/frmatthew/exsurge/">the exsurge GitHub pages</a>.</em></p>
-  
-  <p><strong>Warning:</strong> exsurge is pre-release software, and likely to not function the way you expect, or even function at all.</p>
+
+  <!--chant-visual use-drop-cap="false" annotation="IV">(c3) PU(ei)ER(i) *() na(iji)tus(h) est(hhh) no(ih/ji)bis,(i) (;) et(ei~) fí(iji)li(hg)us(f) da(hhi)tus(h) est(h) no(hihh)bis:(efe) (:) cu(e)jus(f) im(h)pé(gi!jk)ri(ih)um(h) (,) su(h)per(h) hú(ih/ji)me(hg)rum(hhh) e(hf//hghvGF)jus:(gf) (:) et(hg) vo(h)cá(hji)bi(h)tur(hhh) no(h)men(hhh) e(highvGF)jus,(gf) (;) ma(hj)gni(i) con(eh~)sí(h)li(hhhf)i(f) An(fhf!gwh)ge(efe)lus.(e) Ps.(::) Can(ehg)tá(hi)te(i) Dó(i)mi(i)no(i) cán(ik)ti(j)cum(j) no(ji)vum:(ij) *(:) qui(ig)a(hi) mi(i)ra(i)bí(i!jwk)li(i)a(h) fe(hhh)cit.(fe) (::) Gló(ehg)ri(hi)a(i) Pa(i)tri.(i) (::) E(i) u(i!jwk) o(i) u(h) a(hhh) e.(fe) (::)</chant-visual-->
 
   <label>Enter your GABC code here:</label><br/>
-  <textarea rows="10" cols="80" id="gabcSource" oninput="updateChant()" onchange="updateChant()">(c3) PU(ei)ER(i) *() na(iji)tus(h) est(hhh) no(ih/ji)bis,(i) (;) et(ei~) fí(iji)li(hg)us(f) da(hhi)tus(h) est(h) no(hihh)bis:(efe) (:) cu(e)jus(f) im(h)pé(gi!jk)ri(ih)um(h) (,) su(h)per(h) hú(ih/ji)me(hg)rum(hhh) e(hf//hghvGF)jus:(gf) (:) et(hg) vo(h)cá(hji)bi(h)tur(hhh) no(h)men(hhh) e(highvGF)jus,(gf) (;) ma(hj)gni(i) con(eh~)sí(h)li(hhhf)i(f) An(fhf!gwh)ge(efe)lus.(e) Ps.(::) Can(ehg)tá(hi)te(i) Dó(i)mi(i)no(i) cán(ik)ti(j)cum(j) no(ji)vum:(ij) *(:) qui(ig)a(hi) mi(i)ra(i)bí(i!jwk)li(i)a(h) fe(hhh)cit.(fe) (::) Gló(ehg)ri(hi)a(i) Pa(i)tri.(i) (::) E(i) u(i!jwk) o(i) u(h) a(hhh) e.(fe) (::)</textarea>
+  <textarea rows="10" cols="80" id="gabcSource" oninput="updateChant()" onchange="updateChant()">(c4) CHris(ffg)tus(f.) *(,) fac(fg)tus(f) est(f') pro(f) no(ghF'ED.g_e/fg)bis(f.) (;) o(f)bé(hf/gh!jj/kjk)di(jij)ens(h_g) (,) us(h!jjh)que(f.) ad(ixfiH'Gh) mor(fgf___)tem,(f.) (:) mor(ixf!hhi)tem(g) au(ixgjj//)tem(j.h!iw!jvIG'hw!ivHG) cru(fv.ff)cis.(f_c) (,) (fg!hvGF.e!g'h//fhg/hggf.) V/.(z0::c3)  Prop(d)ter(d) quod(d) et(fe~) De(eh)us(h.) (,) e(h)xal(h)tá(h)vit(h) il(h)lum,(ihhe.//hih___/ihhe.) (,) (hi!kv//lvKI'jvHF.) (,) (h_g/ijh'___ jvIH'jvIH'//hvGF.) (:) et(f) de(f!h'i)dit(i) il(i)li(ih/jki/hhf.) (,) no(hf/hhh)men,(h.f!gwh!iv.hi/jhh/iih.) (;) quod(d) est(d) su(d)per(d) o(dfE'D)mne(ef) *() no(fhG'Fhhh)men.(hhf.) (,) (gxg_fgvED.fgED.fehv.hhhff//dfe/feed.) (::)</textarea>
   <div id="chant-container">
   </div>
-
-  <script type="text/javascript" src="https://ex.surge.sh/exsurge.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/document-register-element/0.5.3/document-register-element.js">/* W3C Custom Elements */</script>
+  <script type="text/javascript" src="../dist/exsurge.js"></script>
   <script type="text/javascript">
     /* testing exsurge */
     var ctxt = new exsurge.ChantContext();
-
     ctxt.lyricTextFont = "'Crimson Text', serif";
     ctxt.lyricTextSize *= 1.2;
     ctxt.dropCapTextFont = ctxt.lyricTextFont;
     ctxt.annotationTextFont = ctxt.lyricTextFont;
-
     var score;
     var gabcSource = document.getElementById('gabcSource');
     var chantContainer = document.getElementById('chant-container');
+    //
+    // to use canvas drawing, you should use the canvas object belonging to the
+    // canvas, resizing it as below. The reason for custom resizing is that the
+    // canvas drawing takes into consideration screen dpi in order to render
+    // the highest possibly quality on lots of different screens.
+    // 
+    // 
+    // document.querySelector('body').appendChild(ctxt.canvas);
+    // ctxt.setCanvasSize(1280, 720);
+    //
+    // To render to the canvas, you can use a standard animation loop, which
+    // draws to the canvas at the desired intervals, e.g.:
+    // 
+    //
+    // function animloop() {
+    //   requestAnimationFrame(animloop);
+    //
+    //   if (score)
+    //     score.draw(ctxt);
+    // };
+    //
     var updateChant = function() {
       if (score) {
         exsurge.Gabc.updateMappingsFromSource(ctxt, score.mappings, gabcSource.value);
@@ -47,18 +66,16 @@
       } else {
         mappings = exsurge.Gabc.createMappingsFromSource(ctxt, gabcSource.value);
         score = new exsurge.ChantScore(ctxt, mappings, true);
-        score.annotation = new exsurge.Annotation(ctxt, "%VII%");
+        score.annotation = new exsurge.Annotation(ctxt, "%V%");
       }
-
       layoutChant();
     }
-
     var layoutChant = function() {
       // perform layout on the chant
       score.performLayoutAsync(ctxt, function() {
         score.layoutChantLines(ctxt, chantContainer.clientWidth, function() {
           // render the score to svg code
-          chantContainer.innerHTML = score.createDrawable(ctxt);
+          chantContainer.innerHTML = score.createSvg(ctxt);
         });
       });
     }
