--- a/chant.html
+++ b/chant.html
@@ -27,7 +27,7 @@
   <div id="chant-container">
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/document-register-element/0.5.3/document-register-element.js">/* W3C Custom Elements */</script>
-  <script type="text/javascript" src="../dist/exsurge.js"></script>
+  <script type="text/javascript" src="https://ex.surge.sh/exsurge.js"></script>
   <script type="text/javascript">
     /* testing exsurge */
     var ctxt = new exsurge.ChantContext();
