--- a/proofer.html
+++ b/proofer.html
@@ -46,6 +46,7 @@
     ctxt.lyricTextSize *= 1.2;
     ctxt.dropCapTextFont = ctxt.lyricTextFont;
     ctxt.annotationTextFont = ctxt.lyricTextFont;
+    ctxt.glyphScaling = (1.0 / 16.0) * 2.0;
     var score;
     var gabcSource = document.getElementById('gabcSource');
     var chantContainer = document.getElementById('chant-container');
